@@ -1,5 +1,9 @@
 2004-11-08  Paolo Bonzini  <bonzini@gnu.org>
 
+	* lightning/ppc/fp.h: Do not clobber f31.
+
+2004-11-08  Paolo Bonzini  <bonzini@gnu.org>
+
 	* lightning.h: New name of...
 	* lightning-inst.h: ... this file.
 	* lightning.h.in: Removed.
